--- a/inspection.css
+++ b/inspection.css
@@ -8,19 +8,9 @@ body {
 }
 
 .h1top {
-  position: fixed;
-  top: 0;
-  left: 0;
-  width: 100%;
-  height: 32px;
-  text-align: center;
-  font-size: 22px;
-  color: #000000;
-  background-color: #ffffff;
   display: flex;
+  justify-content: space-between;
   align-items: center;
-  justify-content: center;
-  z-index: 5;
 }
 
 h1 {
@@ -104,27 +94,23 @@ th, td {
   justify-content: left;
 }
 .submit-btn {
-  margin-right: 20px; /* 設置右邊距以與 h1 元素分隔 */
-  white-space: nowrap; /* 避免按鈕換行 */
+  white-space: nowrap;
+  margin-left: 20px;
 }
 
 
 
-.submitFormbtn {
-  width: 50%;
-  padding: 10px;
-  margin: 0 auto;
-  display: block;
-  background-color: #7c7c7c;
+
+#submitFormbtn {
+  background-color: #007bff;
   color: #fff;
   border: none;
-  border-radius: 5px;
+  border-radius: 4px;
+  padding: 8px 16px;
+  font-size: 16px;
   cursor: pointer;
   margin-left: 20px;
-  margin-top: 5px;
-  margin-bottom: 5px;
 }
-
 
 
 
