--- a/inspection.css
+++ b/inspection.css
@@ -11,8 +11,8 @@ body {
   display: flex;
   justify-content: space-between;
   align-items: center;
+  padding-right: 20px;
 }
-
 h1 {
   position: fixed;
   text-align: center;
@@ -103,13 +103,11 @@ th, td {
 
 #submitFormbtn {
   background-color: #007bff;
+  border-color: #007bff;
   color: #fff;
-  border: none;
-  border-radius: 4px;
-  padding: 8px 16px;
   font-size: 16px;
-  cursor: pointer;
-  margin-left: 20px;
+  font-weight: bold;
+  margin-left: auto;
 }
 
 
