--- a/inspection.css
+++ b/inspection.css
@@ -9,7 +9,7 @@ body {
 
 .h1top {
   width: 80%;
-  height: 50px;
+  height: 44px;
   display: flex;
   justify-content: space-between;
   align-items: center;
@@ -31,6 +31,12 @@ body {
   height: calc(100vh - 82Px);
 }
 
+.table table-striped table-hover {
+  border: 1px solid #ff0000;
+
+
+}
+
 .table-container th:nth-child(2),
 .table-container td:nth-child(2) {
   width: 33%; /* 調整數量欄位的寬度 */
@@ -38,6 +44,8 @@ body {
 
 .form-control {
   border-radius: 0;
+  border: 1px solid #000000;
+  text-align: right; /* 調整文字靠右對齊 */
 }
 
 
@@ -50,7 +58,7 @@ table {
 
 thead {
   position: sticky;
-  top: 0;
+  top: -3px;
   background-color: #ffffff;
   z-index: 4;
 }
@@ -59,7 +67,7 @@ thead {
 
 .input-group {
   display: flex;
-  align-items: center;
+  align-items: right;
   margin-bottom: 8px;
   z-index: 3;
   
@@ -67,13 +75,14 @@ thead {
 
 .input-group-prepend {
   display: flex;
-  align-items: center;
+  align-items: right;
   margin-right: 8px;
 }
 
 
 .text-right {
-  text-align: right;
+  text-align: right; /* 調整文字靠右對齊 */
+  border: 1px solid #7979794b;
 }
 
 
@@ -123,6 +132,7 @@ th, td {
   padding: 10px 20px;
   width: auto;
   margin-left: 10px;
+  border-radius: 20px;
 }
 
 .under-line {
