--- a/inspection.css
+++ b/inspection.css
@@ -16,6 +16,24 @@ body {
   margin-top: 0;
 }
 
+.h1top h1 {
+  margin: 0;
+  font-size: 30px;
+  
+}
+
+
+.h1_inspection{
+  text-shadow: 2px 2px 2px #888888;
+  position: absolute;
+  top: 0px;
+  top: 10px;
+  left : 20px; 
+  text-align: center;
+  color: #000000;
+  font-weight: bold;
+}
+
 .serch_div {
   width: 90%;
   height: 44px;
@@ -40,11 +58,7 @@ body {
 .form-group {
   margin-bottom: 0.5rem;
 }
-.h1top h1 {
-  margin: 0;
-  font-size: 30px;
-  
-}
+
 
 .table-container {
   margin-top: 0px;
@@ -127,10 +141,8 @@ th, td {
   top: 10px;
   left : 20px; 
   text-align: center;
-  font-size: 50px;
   color: #000000;
   font-weight: bold;
-  
 }
 
 .pagination {
@@ -170,7 +182,6 @@ th, td {
   height: 30px;
   line-height: 30px;
   display: block;
-
 }
 
 /* toggle container */
@@ -199,3 +210,5 @@ th, td {
   display: flex;
   align-items: center;
 }
+
+
