--- a/login.css
+++ b/login.css
@@ -1,4 +1,5 @@
 body {
+    font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, sans-serif;
     background-image: url('background.jpg');
     background-position: center center;
     background-repeat: no-repeat;
