--- a/frontinspection.css
+++ b/frontinspection.css
@@ -1,81 +1,182 @@
 
 body {
-    font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, sans-serif;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
-    height: 100vh;
-    margin: 0;
-  }
+  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, sans-serif;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  height: 100vh;
+  margin: 0;
+}
 
 
-  .h1top h1 {
-    margin: 0;
-    font-size: 30px;
-  }
+.h1top h1 {
+  margin: 0;
+  font-size: 30px;
+}
 
 .h1top {
-    width: 100%;
-    height: 44px;
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    margin-top: 0;
+  width: 100%;
+  height: 90px;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  margin-top: 0;
+}
+
+.h1{
+  text-shadow: 2px 2px 2px #888888;
+  position: absolute;
+  top: 0px;
+  left : 20px; 
+  text-align: center;
+  color: #000000;
+  font-weight: bold;
+  margin-top: 0;
+}
+
+.pagination {
+  position: absolute;
+  top: 0px;
+  right: 0px;
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  align-items: center;
+  z-index: 2;
+}
+
+.submit_div1 {
+  flex: 1;
+}
+
+.submit_div2 {
+  flex: 1;
+}
+
+.submitinfobtn,
+.submitdownloadbtn {
+  padding: 10px 20px;
+  font-size: 16px;
+  background-color: #007bff;
+  color: white;
+  border-radius: 10px;
+  display: flex;
+  justify-content: center; /* 將內容水平居中 */
+  align-items: center; /* 將內容垂直居中 */
+}
+
+.submitinfobtn:hover,
+.submitdownloadbtn:hover {
+  background-color: #005bbd;
+  cursor: pointer;
+}
+
+
+@media screen and (max-width: 425px) {
+  .pagination {
+    flex-direction: column-reverse;
   }
 
-  .h1{
-    text-shadow: 2px 2px 2px #888888;
-    position: absolute;
-    top: 0px;
-    left : 20px; 
-    text-align: center;
-    color: #000000;
-    font-weight: bold;
-    margin-top: 0;
-  }
+}
 
-  .submit_div1 {
-    position: absolute;
-    top: 10px;
-    right: 100px;
-  }
-  
-  .submit_div2 {
-    position: absolute;
-    top: 10px;
-    right: 20px;
-  }
-  
+.table-container {
+  width: 100%;
+  margin-top: 0px;
+  overflow-y: auto;
+  height: calc(100vh - 82Px);
+}
 
-  .submit_div button {
-    margin: 5px;
-  }
+.table {
+  width: 100%;
+}
+
+.table-container td:first-child {
+  width: 25%; /* 設定日期列的寬度 */
+  text-align: center;
+  font-size: 20px;
+}
+
+.table-container td:nth-child(2)  {
+  width: 75%; /* 設定單號列的寬度 */
+}
+
+thead {
+  position: sticky;
+  top: -3px;
+  background-color: #c9d6ff;
+  ;
+  z-index: 1;
+  height: 45px;
+}
+
+.th1 {
+  justify-content: center; /* 將內容水平居中 */
+  align-items: center; /* 將內容垂直居中 */
+  text-align: center;
+  font-weight: bold;
+  font-size: 20px;
+}
+
+.th2 {
+  justify-content: left; /* 將內容水平居中 */
+  align-items: left; /* 將內容垂直居中 */
+  text-align: left;
+  font-weight: bold;
+  font-size: 20px;
+  padding-left: 10px;
+}
+
+td:first-child {
+  font-size: 20px;
+  font-weight: bold;
+}
+
+.check_div {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  padding: 1px;
+  flex-direction: column;
+  margin: 2px;
+}
 
 .check-button {
-    background-color: #fff;
-    border: 1px solid #000;
-    color: #000;
-    font-size: 14px;
-    padding: 5px 10px;
-    cursor: pointer;
-  }
+  width: 100%;
+  text-align: left;
+  background-color: #fff;
+  border: 1px solid #000;
+  color: #000;
+  font-size: 18px;
+  font-weight: bold;
+  padding: 10px 10px;
+  cursor: pointer;
+  border-radius: 10px;
+  justify-content: center;
+  align-items: center;
+  margin: 4px;
+}
 
-  .check-button.selected {
-    background-color: #000;
-    color: #fff;
-  }
+.check-button.selected {
+  background-color: #000;
+  color: #fff;
+}
 
-  .under-line {
-    position: fixed;
-    bottom: 0;
-    left: 0;
-    width: 100%;
-    text-align: center;
-    font-size: 18px;
-    color: #000000;
-    background-color: #ffffff;
-    height: 30px;
-    line-height: 30px;
-    display: block;
+.table-container td {
+  border-bottom: 3px solid #000;
+}
+
+
+.under-line {
+  position: fixed;
+  bottom: 0;
+  left: 0;
+  width: 100%;
+  text-align: center;
+  font-size: 18px;
+  color: #000000;
+  background-color: #ffffff;
+  height: 30px;
+  line-height: 30px;
+  display: block;
 }
