--- a/inspection.css
+++ b/inspection.css
@@ -23,7 +23,6 @@ body {
 .h1top h1 {
   margin: 0;
   font-size: 30px;
-  
 }
 
 
@@ -72,8 +71,6 @@ body {
 
 .table table-striped table-hover {
   border: 1px solid #ff0000;
-
-
 }
 
 .table-container th:nth-child(2),
@@ -86,9 +83,12 @@ body {
   border: 1px solid #000000;
   text-align: right; /* 調整文字靠右對齊 */
 }
+
+
 #firstinspection {
   border-bottom: 2px solid #000000;
-
+  padding:0 !important ;
+  height: 60px;
 }
 
 
@@ -109,14 +109,13 @@ thead {
 
 .input-group {
   display: flex;
-  align-items: right;
-  margin-bottom: 8px;
-  
+  align-items: center;
+  justify-content: center;
 }
 
 .input-group-prepend {
   display: flex;
-  align-items: right;
+  align-items: center;
   margin-right: 8px;
 }
 
@@ -137,6 +136,7 @@ thead th {
 th, td {
   text-align: left;
   padding: 8px;
+  
 }
 
 .h1_inspection{
@@ -165,7 +165,7 @@ th, td {
 
 #submitFormbtn {
   background-color: #007bff;
-  border-color: #007bff;
+  border: 2px solid rgb(0, 0, 0);
   color: #fff;
   font-size: 16px;
   font-weight: bold;
@@ -217,4 +217,48 @@ th, td {
   align-items: center;
 }
 
+/*  */
+/* 彈跳視窗樣式 */
+.modal {
+  display: none;
+  position: fixed;
+  z-index: 10;
+  left: 0;
+  top: 0;
+  width: 100%;
+  height: 100%;
+  overflow: auto;
+  background-color: rgba(0,0,0,0.4);
+}
 
+/* 彈跳視窗內容樣式 */
+.modal-content {
+  background-color: #fefefe;
+  margin: 15% auto;
+  padding: 20px;
+  border: 1px solid #888;
+  width: 90%;
+}
+
+/* 關閉按鈕樣式 */
+.modalbtn {
+  background-color: #007bff;
+  color: #fff;
+  float: right;
+  font-size: 28px;
+  font-weight: bold;
+  border-radius: 10px;
+  border: 2px solid #000000;
+  margin: 20px;
+}
+
+.modalbtn:hover,
+.modalbtn:focus {
+  color: #888;
+  text-decoration: none;
+  cursor: pointer;
+}
+
+#rows{
+  margin-top: 20px;
+}
