--- a/frontinventory.css
+++ b/frontinventory.css
@@ -96,13 +96,13 @@ body {
 }
 
 .table-container td:first-child {
-  width: 25%; /* 設定日期列的寬度 */
+  width: 40%; /* 設定日期列的寬度 */
   text-align: center;
   font-size: 20px;
 }
 
 .table-container td:nth-child(2)  {
-  width: 75%; /* 設定單號列的寬度 */
+  width: 60%; /* 設定單號列的寬度 */
 }
 
 thead {
@@ -120,6 +120,7 @@ thead {
   text-align: center;
   font-weight: bold;
   font-size: 20px;
+  width: 40%;
 }
 
 .th2 {
@@ -129,6 +130,7 @@ thead {
   font-weight: bold;
   font-size: 20px;
   padding-left: 10px;
+  width: 60%;
 }
 
 td:first-child {
@@ -148,9 +150,11 @@ td:first-child {
 .check-button {
   width: 100%;
   text-align: left;
-  background-color: #fff;
-  border: 1px solid #000;
-  color: #000;
+  background-color: rgb(0, 144, 211);
+  border-top: 2px solid #dadada;
+  border-right: 2px solid #dadada;
+  box-shadow: 0px 4px rgb(0, 91, 133);
+  color: rgb(255, 255, 255);
   font-size: 18px;
   font-weight: bold;
   padding: 10px 10px;
