--- a/inspection.css
+++ b/inspection.css
@@ -10,10 +10,21 @@ body {
   margin: 0;
 }
 
+header {
+  position: fixed;
+  top: 0;
+  left: 0;
+  right: 0;
+  z-index: 999;
+  background-color: white;
+}
+
+
 .h1top {
   width: 80%;
   height: 44px;
-  display: flex;
+  position: flex;
+  display: block;
   justify-content: space-between;
   align-items: center;
   margin-top: 0;
@@ -28,7 +39,7 @@ body {
 
 .h1_inspection{
   text-shadow: 2px 2px 2px #888888;
-  position: absolute;
+  position: fixed;
   top: 0px;
   top: 10px;
   left : 20px; 
@@ -47,6 +58,7 @@ body {
   
 }
 .drugNameText {
+  margin-left: 15px;
   width: 130px !important;
 }
 
@@ -64,14 +76,11 @@ body {
 
 
 .table-container {
-  margin-top: 0px;
+  position: relative;
   overflow-y: auto;
-  height: calc(100vh - 82Px);
+  margin-top: 100px; /*調整與header之間的間距*/
 }
 
-.table table-striped table-hover {
-  border: 1px solid #ff0000;
-}
 
 .table-container th:nth-child(2),
 .table-container td:nth-child(2) {
@@ -84,42 +93,16 @@ body {
   text-align: right; /* 調整文字靠右對齊 */
 }
 
-.lot, .date, .qty {
-  display: block;
+.lot, .date, .qty { 
   width: 100%;
-  padding: 0.375rem 0.75rem;
-  font-size: 1rem;
-  font-weight: 400;
-  line-height: 1.5;
-  color: #495057;
-  background-color: #fff;
-  background-clip: padding-box;
-  border: 1px solid #ced4da;
-  border-radius: 0.25rem;
-  transition: border-color 0.15s ease-in-out, box-shadow 0.15s ease-in-out;
+  margin: 0 auto;
+  box-sizing: border-box;
   text-align: right; /* 調整文字靠右對齊 */
-}
-
-.lot::-ms-expand, .date::-ms-expand, .qty::-ms-expand {
-  background-color: transparent;
-  border: 0;
-}
-
-.lot:focus, .date:focus, .qty:focus {
-  color: #495057;
-  background-color: #fff;
-  border-color: #80bdff;
-  outline: 0;
-  box-shadow: 0 0 0 0.2rem rgba(0, 123, 255, 0.25);
-}
-
-.lot::placeholder, .date::placeholder, .qty::placeholder {
-  color: #6c757d;
-}
-
-.lot:disabled, .lot[readonly], .date:disabled, .date[readonly], .qty:disabled, .qty[readonly] {
-  background-color: #e9ecef;
-  opacity: 1;
+  height: 40px;
+  border: 1px solid #000000;
+  outline: none;
+  background: transparent;
+  resize: none;
 }
 
 
@@ -132,17 +115,15 @@ body {
 
 table {
   width: 100%;
-  border-collapse: collapse;
-  table-layout: fixed;
 }
 
 thead {
   position: sticky;
   top: -3px;
   background-color: #ffffff;
+  overflow-y:fixed;
   z-index: 4;
 }
-
 
 
 .input-group {
@@ -211,6 +192,9 @@ th, td {
   width: auto;
   margin-left: 10px;
   border-radius: 10px;
+  border-top: 2px solid #dadada;
+  border-right: 2px solid #dadada;
+  box-shadow: 0px 4px rgb(0, 90, 185);
 }
 
 .under-line {
@@ -260,7 +244,7 @@ th, td {
 .modal {
   display: none;
   position: fixed;
-  z-index: 10;
+  z-index: 1000;
   left: 0;
   top: 0;
   width: 100%;
@@ -268,14 +252,21 @@ th, td {
   overflow: auto;
   background-color: rgba(0,0,0,0.4);
 }
-
+.myModal_title {
+  font-family: Arial, sans-serif;
+  font-size: 14px;
+  font-weight: bold;
+  color: #000000;
+}
 /* 彈跳視窗內容樣式 */
 .modal-content {
   background-color: #fefefe;
   margin: 15% auto;
   padding: 20px;
+  left: 0;
+  top: 0;
   border: 1px solid #888;
-  width: 90%;
+  width: 95%;
 }
 
 /* 關閉按鈕樣式 */
@@ -288,6 +279,9 @@ th, td {
   border-radius: 10px;
   border: 2px solid #000000;
   margin: 20px;
+  border-top: 2px solid #dadada;
+  border-right: 2px solid #dadada;
+  box-shadow: 0px 4px rgb(0, 90, 185);
 }
 
 .modalbtn:hover,
@@ -297,6 +291,13 @@ th, td {
   cursor: pointer;
 }
 
-#rows{
-  margin-top: 20px;
+.Modalrows{
+  margin-top: 5px; 
+}
+.Modalrows-area{
+  margin-top: 5px; 
+}
+.delBtn{
+  background: none !important;
+  border: none ; 
 }
