--- a/login.css
+++ b/login.css
@@ -1,6 +1,6 @@
 body {
     font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, sans-serif;
-    background-image: url('background.jpg');
+    background-image: url('login.jpg');
     background-position: center center;
     background-repeat: no-repeat;
     background-size: cover;
