--- a/frontinventory.css
+++ b/frontinventory.css
@@ -54,7 +54,15 @@ body {
   flex: 1;
 }
 
-.AddINVbtn,
+.allform{
+  width: 100%;
+  height: 100%;
+}
+
+
+
+
+.addform,
 .submitdownloadbtn {
   margin: 3px;
   padding: 7px 12px;
@@ -70,7 +78,7 @@ body {
   box-shadow: 0px 4px rgb(0, 90, 185);
 }
 
-.AddINVbtn:hover,
+.addform:hover,
 .submitdownloadbtn:hover {
   background-color: #005bbd;
   cursor: pointer;
@@ -84,95 +92,6 @@ body {
 
 }
 
-.table-container {
-  width: 100%;
-  margin-top: 0px;
-  overflow-y: auto;
-  height: calc(100vh - 82Px);
-}
-
-.table {
-  width: 100%;
-}
-
-.table-container td:first-child {
-  width: 40%; /* 設定日期列的寬度 */
-  text-align: center;
-  font-size: 20px;
-}
-
-.table-container td:nth-child(2)  {
-  width: 60%; /* 設定單號列的寬度 */
-}
-
-thead {
-  position: sticky;
-  top: -3px;
-  background-color: #c9d6ff;
-  ;
-  z-index: 1;
-  height: 45px;
-}
-
-.th1 {
-  justify-content: center; /* 將內容水平居中 */
-  align-items: center; /* 將內容垂直居中 */
-  text-align: center;
-  font-weight: bold;
-  font-size: 20px;
-  width: 40%;
-}
-
-.th2 {
-  justify-content: left; /* 將內容水平居中 */
-  align-items: left; /* 將內容垂直居中 */
-  text-align: left;
-  font-weight: bold;
-  font-size: 20px;
-  padding-left: 10px;
-  width: 60%;
-}
-
-td:first-child {
-  font-size: 20px;
-  font-weight: bold;
-}
-
-.check_div {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  padding: 1px;
-  flex-direction: column;
-  margin: 2px;
-}
-
-.check-button {
-  width: 100%;
-  text-align: left;
-  background-color: rgb(0, 144, 211);
-  border-top: 2px solid #dadada;
-  border-right: 2px solid #dadada;
-  box-shadow: 0px 4px rgb(0, 91, 133);
-  color: rgb(255, 255, 255);
-  font-size: 18px;
-  font-weight: bold;
-  padding: 10px 10px;
-  cursor: pointer;
-  border-radius: 10px;
-  justify-content: center;
-  align-items: center;
-  margin: 4px;
-}
-
-.check-button.selected {
-  background-color: #000;
-  color: #fff;
-}
-
-.table-container td {
-  border-bottom: 3px solid #000;
-}
 
 
 .under-line {
