--- a/frontinventory.css
+++ b/frontinventory.css
@@ -1,38 +1,20 @@
 
 body {
   font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, sans-serif;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  height: 100vh;
-  margin: 0;
-}
-
-
-.h1top h1 {
-  margin: 0;
-  font-size: 30px;
-}
-
-.h1top {
   width: 100%;
-  height: 90px;
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
-  margin-top: 0;
+  min-height: 100vh;
+  margin: 0;
 }
 
 .h1{
   text-shadow: 2px 2px 2px #888888;
-  position: absolute;
-  top: 0px;
+  font-size: 30px;
   left : 20px; 
-  text-align: center;
+  margin-left: 10px;
+  text-align: left;
   color: #000000;
   font-weight: bold;
-  margin-top: 0;
+  font-family: 'Courier New', Courier, monospace;
 }
 
 .pagination {
@@ -54,7 +36,7 @@ body {
   flex: 1;
 }
 
-.allform{
+.main_div{
   width: 100%;
   height: 100%;
 }
@@ -62,36 +44,43 @@ body {
 
 
 
-.addform,
-.submitdownloadbtn {
-  margin: 3px;
-  padding: 7px 12px;
-  font-size: 16px;
-  background-color: #007bff;
-  color: white;
-  border-radius: 10px;
-  display: flex;
-  justify-content: center; /* 將內容水平居中 */
-  align-items: center; /* 將內容垂直居中 */
-  border-top: 2px solid #dadada;
-  border-right: 2px solid #dadada;
-  box-shadow: 0px 4px rgb(0, 90, 185);
+.header_contorls
+ {
+
+  margin: 2px;
+  background-color: #f5f5f5;
+  border-radius: 2px;
+  border: 1px solid gray;
 }
 
-.addform:hover,
-.submitdownloadbtn:hover {
+.basic_botton
+{
+  font-size: 16px;
+  background-color: steelblue;
+  color: white;
+  border-radius: 5px;
+  border: 2px solid #dadada;
+  margin-top: 2px;
+}
+
+.del_botton
+{
+ 
+  background-color: #f5f5f5;
+  border-radius: 2px;
+  border: 1px solid gray;
+}
+.div_botton
+{
+  margin: 2px;
+  background-color: #f5f5f5;
+  border-radius: 2px;
+  border: 1px solid gray;
+}
+.basic_botton:focus {
   background-color: #005bbd;
   cursor: pointer;
 }
-
-
-@media screen and (max-width: 425px) {
-  .pagination {
-    flex-direction: column-reverse;
-  }
-
-}
-
 
 
 .under-line {
@@ -106,4 +95,6 @@ body {
   height: 30px;
   line-height: 30px;
   display: block;
+  z-index: 9;
 }
+
