--- a/inventory/main.css
+++ b/inventory/main.css
@@ -1,5 +1,4 @@
 body {
-  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, sans-serif;
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -35,7 +34,7 @@ header {
 }
 
 
-.h1_inventory{
+.h1_inspection{
   text-shadow: 2px 2px 2px #888888;
   position: fixed;
   top: 0px;
@@ -77,8 +76,12 @@ header {
   /* position: relative;
   overflow-y: auto; */
   margin-top: 100px; /*調整與header之間的間距*/
+  width: 100%;
 }
-
+.firstinventory
+{
+  border-bottom: solid 1px;
+}
 
 .table-container th:nth-child(2),
 .table-container td:nth-child(2) {
@@ -88,6 +91,7 @@ header {
 .form-control {
   border-radius: 0;
   border: 1px solid #000000;
+  width: 50px;
   text-align: right; /* 調整文字靠右對齊 */
 }
 
@@ -112,7 +116,7 @@ header {
   resize: none;
 }
 
-.firstinventory {
+.firstinspection {
   border-bottom: 2px solid #000000;
   padding:0 !important ;
   height: 60px;
@@ -121,6 +125,7 @@ header {
 
 table {
   width: 100%;
+  overflow-y: block;
 }
 
 thead {
@@ -163,7 +168,6 @@ th, td {
   padding: 8px;
   
 }
-
 
 .pagination {
   position: absolute;
@@ -240,13 +244,11 @@ th, td {
 /* 彈跳視窗樣式 */
 .modal {
   display: none;
-  position: fixed;
+  /* position: fixed; */
   z-index: 1000;
   left: 0;
   top: 0;
   width: 100%;
-  height: 100%;
-  overflow: auto;
   background-color: rgba(0, 0, 0, 0.4);
 }
 .myModal_title {
@@ -264,15 +266,13 @@ th, td {
   left: 0;
   top: 0;
   box-shadow: -4px 4px rgba(0, 0, 0, 0.85);
-  width: 95%;
+  width: 90%;
 }
 
 /* 關閉按鈕樣式 */
 .modalbtn,.addRowBtn {
-  max-width: 600px;
   background-color: #007bff;
   color: #ffffff;
-  float: right;
   font-size: 28px;
   font-weight: bold;
   border-radius: 10px;
