--- a/controlleddrug/main.css
+++ b/controlleddrug/main.css
@@ -2,8 +2,8 @@
 body {
   font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, sans-serif;
   width: 100%;
-  min-height: 100vh;
-  margin: 0;
+  /* min-height: 100vh; */
+  /* margin: 0; */
 }
 
 .h1{
@@ -17,32 +17,6 @@ body {
   font-family: 'Courier New', Courier, monospace;
 }
 
-.pagination {
-  position: absolute;
-  top: 0px;
-  right: 0px;
-  display: flex;
-  flex-direction: row;
-  justify-content: center;
-  align-items: center;
-  z-index: 2;
-}
-
-.submit_div1 {
-  flex: 1;
-}
-
-.submit_div2 {
-  flex: 1;
-}
-
-.main_div{
-  width: 100%;
-  height: 100%;
-}
-
-
-
 
 .header_contorls
  {
@@ -51,35 +25,6 @@ body {
   background-color: #f5f5f5;
   border-radius: 2px;
   border: 1px solid gray;
-}
-
-.basic_botton
-{
-  font-size: 16px;
-  background-color: steelblue;
-  color: white;
-  border-radius: 5px;
-  border: 2px solid #dadada;
-  margin-top: 2px;
-}
-
-.del_botton
-{
- 
-  background-color: #f5f5f5;
-  border-radius: 2px;
-  border: 1px solid gray;
-}
-.div_botton
-{
-  margin: 2px;
-  background-color: #f5f5f5;
-  border-radius: 2px;
-  border: 1px solid gray;
-}
-.basic_botton:focus {
-  background-color: #005bbd;
-  cursor: pointer;
 }
 
 
