--- a/frontpage.css
+++ b/frontpage.css
@@ -6,7 +6,7 @@ body {
   justify-content: center;
   height: 100vh;
   margin: 0;
-  background-image: url('frontpage.jpg');
+  /* background-image: url('frontpage.jpg'); */
   background-position: center center;
   background-repeat: no-repeat;
   background-size: cover;
