--- a/inventory/main.css
+++ b/inventory/main.css
@@ -1,202 +1,87 @@
+
 body {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
+  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, sans-serif;
+  width: 100%;
   min-height: 100vh;
   margin: 0;
 }
 
-header {
-  position: fixed;
-  top: 0;
-  left: 0;
-  right: 0;
-  z-index: 999;
-  background-color: white;
-}
-
-
-.h1top {
-  width: 80%;
-  height: 44px;
-  position: flex;
-  display: block;
-  justify-content: space-between;
-  align-items: center;
-  margin-top: 0;
-  z-index: 5;
-}
-
-.h1top h1 {
-  margin: 0;
-  font-size: 30px;
-}
-
-
-.h1_inspection{
+.h1{
   text-shadow: 2px 2px 2px #888888;
-  position: fixed;
-  top: 0px;
-  top: 10px;
+  font-size: 30px;
   left : 20px; 
-  text-align: center;
+  margin-left: 10px;
+  text-align: left;
   color: #000000;
   font-weight: bold;
-}
-
-.serch_div {
-  width: 90%;
-  height: 44px;
-  display: flex;
-  justify-content: left;
-  align-items: center;
-  margin-top: 0;
-  
-}
-.drugNameText {
-  margin-left: 15px;
-  width: 130px !important;
-}
-
-
-.drugNameSearch {
-  float: left;
-  margin-left: 10px; /* 調整元素之間的間距 */
-}
-#firstquantity input[type="number"] {
-  width: 80px;
-}
-.form-group {
-  margin-bottom: 0.5rem;
-}
-
-
-.table-container {
-  /* position: relative;
-  overflow-y: auto; */
-  margin-top: 100px; /*調整與header之間的間距*/
-  width: 100%;
-}
-.firstinventory
-{
-  border-bottom: solid 1px;
-}
-
-.table-container th:nth-child(2),
-.table-container td:nth-child(2) {
-  width: 40%; /* 調整數量欄位的寬度 */
-}
-
-.form-control {
-  border-radius: 0;
-  border: 1px solid #000000;
-  width: 50px;
-  text-align: right; /* 調整文字靠右對齊 */
-}
-
-.lot{ 
-  width: 100%;
-  box-sizing: border-box;
-  text-align: right; /* 調整文字靠右對齊 */
-  height: 40px;
-  border: 1px solid #000000;
-  outline: none;
-  background: transparent;
-  resize: none;
-}
-.date, .qty { 
-  width: 100%;
-  box-sizing: border-box;
-  text-align: right; /* 調整文字靠右對齊 */
-  height: 40px;
-  border: 1px solid #000000;
-  outline: none;
-  background: transparent;
-  resize: none;
-}
-
-.firstinspection {
-  border-bottom: 2px solid #000000;
-  padding:0 !important ;
-  height: 60px;
-}
-
-
-table {
-  width: 100%;
-  overflow-y: block;
-}
-
-thead {
-  position: sticky;
-  top: 87px;
-  background-color: #ffffff;
-  overflow-y:fixed;
-  z-index: 4;
-}
-
-
-.input-group {
-  display: flex;
-  align-items: center;
-  justify-content: center;
-}
-
-.input-group-prepend {
-  display: flex;
-  align-items: center;
-  margin-right: 8px;
-}
-
-
-.text-right {
-  text-align: right; /* 調整文字靠右對齊 */
-  border: 1px solid #7979794b;
-}
-
-
-
-thead th {
-  position: sticky;
-  background-color: #c9d6ff;
-  z-index: 2;
-}
-
-th, td {
-  text-align: left;
-  padding: 8px;
-  
+  font-family: 'Courier New', Courier, monospace;
 }
 
 .pagination {
   position: absolute;
-  margin-left: auto;
-  margin-right: 0;
-  top: 6px;
-  right : 10px; 
+  top: 0px;
+  right: 0px;
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  align-items: center;
+  z-index: 2;
 }
 
-.submit-btn {
-  white-space: nowrap;
-  margin-left: 20px;
+.submit_div1 {
+  flex: 1;
 }
 
-#submitFormbtn {
-  background-color: #007bff;
-  border: 2px solid rgb(0, 0, 0);
-  color: #fff;
+.submit_div2 {
+  flex: 1;
+}
+
+.main_div{
+  width: 100%;
+  height: 100%;
+}
+
+
+
+
+.header_contorls
+ {
+
+  margin: 2px;
+  background-color: #f5f5f5;
+  border-radius: 2px;
+  border: 1px solid gray;
+}
+
+.basic_botton
+{
   font-size: 16px;
-  font-weight: bold;
-  padding: 10px 20px;
-  width: auto;
-  margin-left: 10px;
-  border-radius: 10px;
-  border: 2px solid rgb(44, 44, 44);
-  border-top: 2px solid #dadadad8;
-  border-right: 2px solid #dadadad8;
-  box-shadow: -2px 3px rgb(0, 90, 185);
+  background-color: steelblue;
+  color: white;
+  border-radius: 5px;
+  border: 2px solid #dadada;
+  margin-top: 2px;
 }
+
+.del_botton
+{
+ 
+  background-color: #f5f5f5;
+  border-radius: 2px;
+  border: 1px solid gray;
+}
+.div_botton
+{
+  margin: 2px;
+  background-color: #f5f5f5;
+  border-radius: 2px;
+  border: 1px solid gray;
+}
+.basic_botton:focus {
+  background-color: #005bbd;
+  cursor: pointer;
+}
+
 
 .under-line {
   position: fixed;
@@ -210,90 +95,6 @@ th, td {
   height: 30px;
   line-height: 30px;
   display: block;
-  z-index: 5;
+  z-index: 9;
 }
 
-/* toggle container */
-.toggle-container {
-  display: inline-block;
-  position: relative;
-  width: 60px;
-  height: 30px;
-  margin-right: 20px;
-}
-
-/* toggle label */
-.toggle-label {
-  position: absolute;
-  top: 0;
-  left: 0;
-  bottom: 0;
-  right: 0;
-  margin: auto;
-  text-align: center;
-  color: #333;
-  font-weight: bold;
-}
-
-.form-check {
-  display: flex;
-  align-items: center;
-}
-
-/*  */
-/* 彈跳視窗樣式 */
-.modal {
-  display: none;
-  /* position: fixed; */
-  z-index: 1000;
-  left: 0;
-  top: 0;
-  width: 100%;
-  background-color: rgba(0, 0, 0, 0.4);
-}
-.myModal_title {
-  font-family: Arial, sans-serif;
-  font-size: 14px;
-  font-weight: bold;
-  color: #000000;
-}
-/* 彈跳視窗內容樣式 */
-.modal-content {
-  max-width: 600px;
-  background-color: #ffffff;
-  margin: 15% auto;
-  padding: 10px;
-  left: 0;
-  top: 0;
-  box-shadow: -4px 4px rgba(0, 0, 0, 0.85);
-  width: 90%;
-}
-
-/* 關閉按鈕樣式 */
-.modalbtn,.addRowBtn {
-  background-color: #007bff;
-  color: #ffffff;
-  font-size: 28px;
-  font-weight: bold;
-  border-radius: 10px;
-  margin: 20px;
-  border: 2px solid rgb(44, 44, 44);
-  border-top: 2px solid #dadadad8;
-  border-right: 2px solid #dadadad8;
-  box-shadow: -2px 3px rgb(0, 90, 185);
-}
-
-.modalbtn:hover,
-.modalbtn:focus {
-  text-decoration: none;
-  cursor: pointer;
-}
-
-.Modalrows{
-  margin-top: 5px; 
-}
-
-.delBtn{
-  background: none !important;
-  border: none ; 
-}
