--- a/inventory/index.css
+++ b/inventory/index.css
@@ -3,7 +3,10 @@ body {
   font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, sans-serif;
   width: 100%;
   height: 100%;
-  /* min-height: 100vh; */
+  min-height: 100vh;
+}
+html, body {
+  touch-action: manipulation;
 }
 .header_div
 {
@@ -40,13 +43,15 @@ body {
 }
 
 
-
+.almcontrol_btn{border-radius: 5px; background-color:#eb3232; padding:0 20px; color:#fff; transition:.2s;}
+.almcontrol_btn:hover{ background-color:#e76d6d; transition:.2s;}
 
 .control_btn{border-radius: 5px; background-color:#005798; padding:0 20px; color:#fff; transition:.2s;}
 .control_btn:hover{ background-color:#0c6eb7; transition:.2s;}
 .link_btn{ border-radius: 5px;  background-color:#AAAAAA; padding:0 20px; color:#fff; transition:.2s;}
 .link_btn:hover{ background-color:#929292; transition:.2s;}
 
-
+.calculate_btn{ border-radius: 5px;  background-color:#c9c9bc; padding:0 20px; color:#fff; transition:.2s;}
+.calculate_btn:hover{ background-color:#c9c9bc; transition:.2s;}
 
 
