--- a/inventory/main.css
+++ b/inventory/main.css
@@ -38,7 +38,16 @@ body {
 }
 
 
+.almcontrol_btn{border-radius: 5px; background-color:#eb3232; padding:0 20px; color:#fff; transition:.2s;}
+.almcontrol_btn:hover{ background-color:#e76d6d; transition:.2s;}
 
+.control_btn{border-radius: 5px; background-color:#005798; padding:0 20px; color:#fff; transition:.2s;}
+.control_btn:hover{ background-color:#0c6eb7; transition:.2s;}
+.link_btn{ border-radius: 5px;  background-color:#AAAAAA; padding:0 20px; color:#fff; transition:.2s;}
+.link_btn:hover{ background-color:#929292; transition:.2s;}
+
+.calculate_btn{ border-radius: 5px;  background-color:#c9c9bc; padding:0 20px; color:#fff; transition:.2s;}
+.calculate_btn:hover{ background-color:#c9c9bc; transition:.2s;}
 
 
 .header_contorls
