--- a/barcodemanagement/main.css
+++ b/barcodemanagement/main.css
@@ -2,20 +2,13 @@
 body {
   font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, sans-serif;
   width: 100%;
+   height: 100%;
   min-height: 100vh;
+  margin: 0;
 }
-
-.header_contorls_allsvg {
-  /* 其他 CSS 屬性... */
-  transition: background-color 0.5s ease-in-out; /* 在 0.3 秒內平滑過渡 */
+.nav_bar_tigger_container {
+  position: fixed !important;
 }
-
-#menuContainer {
-  opacity: 0; /* 初始透明度為 0 */
-  transform: translateY(-10px); /* 初始向上位移 */
-  transition: opacity 0.5s ease-in-out, transform 0.5s ease-in-out;
-}
-
 .h1{
   text-shadow: 2px 2px 2px #888888;
   font-size: 30px;
@@ -46,10 +39,6 @@ body {
   flex: 1;
 }
 
-.main_div{
-  width: 100%;
-  height: 100%;
-}
 
 
 
@@ -73,24 +62,6 @@ body {
   margin-top: 2px;
 }
 
-.del_botton
-{
- 
-  background-color: #f5f5f5;
-  border-radius: 2px;
-  border: 1px solid gray;
-}
-.div_botton
-{
-  margin: 2px;
-  background-color: #f5f5f5;
-  border-radius: 2px;
-  border: 1px solid gray;
-}
-.basic_botton:focus {
-  background-color: #005bbd;
-  cursor: pointer;
-}
 
 
 .under-line {
@@ -106,5 +77,5 @@ body {
   line-height: 30px;
   display: block;
   z-index: 9;
-  margin: 100 auto; /* 水平置中，通過 margin 自動調整 */
 }
+
