--- a/inventory/manager/merge.css
+++ b/inventory/manager/merge.css
@@ -135,6 +135,9 @@
 .merge_display_table_thead_5 {
     width: 80px;
 }
+.merge_display_table_thead_6 {
+    width: 80px;
+}
 .merge_display_table_tbody > tr > td {
     box-sizing: border-box;
     padding: 4px 0px;
@@ -143,7 +146,7 @@
     font-weight: 600;
     border: 1px solid #dedede;
 }
-.merge_delete_button {
+.merge_delete_button, .merge_display_button {
     cursor: pointer;
     box-sizing: border-box;
     padding: 4px 8px;
@@ -153,7 +156,7 @@
     margin: 0px 4px;
     border-radius: 5px;
 }
-.merge_delete_button:hover {
+.merge_delete_button:hover, .merge_display_button:hover {
     color: rgb(35, 35, 35);
     background-color: rgb(15, 184, 240);
     border: 1px solid rgb(5, 55, 99);
@@ -343,6 +346,9 @@
         width: 60px;
     }
     .merge_display_table_thead_5 {
+        width: 40px;
+    }
+    .merge_display_table_thead_6 {
         width: 40px;
     }
 
