--- a/inventory/index.css
+++ b/inventory/index.css
@@ -54,4 +54,47 @@ html, body {
 .calculate_btn{ border-radius: 5px;  background-color:#c9c9bc; padding:0 20px; color:#fff; transition:.2s;}
 .calculate_btn:hover{ background-color:#c9c9bc; transition:.2s;}
 
+.header_invertory_check, .header_invertory_uncheck {
+  height: 40px;
+  border-width: 2px;
+  border-style: outset;
+  border-color: buttonborder;
+  border-image: initial;
+  border-radius: 5px;
+  background-color: #616161;
+  padding: 0 20px;
+  color: #fff;
+  font-weight: 700 !important;
+  cursor: pointer;
+}
+.header_invertory_active {
+  background-color: rgb(108, 214, 37);
+  color: #000;
+}
+
+.popup_creatSelect_normal_CN {
+  max-height: 322px !important;
+}
+.popup_creatSelect_normal_CN::-webkit-scrollbar {
+  width: 8px; /* 设置滚动条的宽度 */
+}
+
+/* 设置滚动条的轨道背景颜色 */
+.popup_creatSelect_normal_CN::-webkit-scrollbar-track {
+  background-color: #f1f1f18c;
+}
+
+/* 设置滚动条的滑块颜色 */
+.popup_creatSelect_normal_CN::-webkit-scrollbar-thumb {
+  background-color: #888;
+  border-radius: 4px;
+}
+
+/* 设置滚动条的滑块在hover状态下的颜色 */
+.popup_creatSelect_normal_CN::-webkit-scrollbar-thumb:hover {
+  background-color: #555;
+}
+.creatSelect_button {
+  min-height: 50px !important;
+}
 
